syntax = "proto3";
option go_package = "github.com/karamaru-alpha/chat-go-server/proto";
package proto;

import "message.proto";

service RoomServices {
    rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse){};
    rpc GetRooms(GetRoomsRequest) returns (GetRoomsResponse){};
    rpc JoinRoom (JoinRoomRequest) returns (JoinRoomResponse){};
    rpc SendMessage(SendMessageRequest) returns(SendMessageResponse){};
}
